<resources>
    <string name="app_name">Travel Pet ADM</string>
    <string name="splash_screen">Para Administradores</string>
    <string name="Login">Login</string>
    <string name="Motorista">Motorista</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    */cabeçalho do drawer navigation --------------------------/**

    <string name="nav_header_title">Administrador </string>
    <string name="nav_header_subtitle">email.teste@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    */submenu na barra de tarefas -----------------------------/**

    <string name="action_configuracao">Configuração conta admin</string>
    <string name="action_salvar">Extrair XLS</string>
    <string name="action_procurar">Procurar</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_sair">Sair</string>

    */ textos do drawer navigation ------------------------- /**

    <string name="titulogerenciamento">Gerenciamento</string>
    <string name="menu_home">Avaliacoes</string>
    <string name="menu_donoAnimal">Dono Animal</string>
    <string name="menu_motorista">Motorista</string>
    <string name="menu_viagem">Viagens</string>
    <string name="menu_veiculos">Veiculos</string>
    <string name="menu_animais">Animais</string>
    <string name="menu_contasadm">Contas Adm</string>
    <string name="titulopreferencias">Administrativo</string>
    <string name="menu_configuracao">Configurações de conta</string>
    <string name="menu_log">Log de Alteracoes</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_TipoAnimal">Tipos de Animal</string>

    <string name="descricao">Os donos de animais têm por muitas vezes transportar
        seu animal para diferentes locais ou comércios especializados. Com o
        crescente aumento do mercado pet, seu transporte se torna escasso por
        falta de motoristas que permitam este transporte e veículos despreparados
        para o mesmo. A ideia e propor um aplicativo que gerencie uma viagem de
        um animal e forneça segurança e agilidade neste tipo de transporte.</string>

    <string name="home_second">Home Second</string>

    <string name="salvarAlerta">Link com firebase não criado!</string>
    */Info Perfil Dono Animal /**
    <string name="abaPerfil">Perfil</string>
    <string name="abaAnimais">Animais</string>
    <string name="abaViagens">Viagens</string>


    <string name="hello_blank_fragment">Em Construção</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmar_senha">confirmar senha</string>
    <string name="senha">senha</string>
    <string name="raca">Raca</string>
    <string name="avaliado">Avaliado</string>
    <string name="avaliador">Avaliador</string>
    <string name="especie">Especie</string>
    <string name="notaAvaliacao">nota</string>
    <string name="login">Acesse sua conta</string>
    <string name="Name">Nome</string>
    <string name="salvar">salvar</string>
    <string name="cadastro_adm">Cadastro ADM</string>
    <string name="cadastre_abaixo_um_novo_administrador_da_travelpet">Cadastre abaixo um novo administrador da TravelPet</string>
    <string name="nome">Nome</string>
    <string name="recuperar_a_senha">Recuperar a senha</string>
    <string name="por_favor_para_que_consigamos_recuperar_sua_senha_informe_seu_e_mail_abaxo_para_que_possamos_enviar_o_link_para_recupera_o_de_senha">Por favor, para que consigamos recuperar sua senha, informe seu e-mail abaxo para que possamos enviar o link para recuperação de senha</string>
    <string name="aperte_o_porquinho_para_deslogar">Aperte o porquinho para deslogar :)</string>
    <string name="logout">Logout</string>
    <string name="tipo_animal">Tipo Animal</string>
    <string name="info_Avaliacao">Informação de Avaliação</string>
    <string name="observação_tipoanimal">Adicione ou edite no banco de dados uma espécie ou raça de animal.</string>
    <string name="observação_Avaliacao">Visualize as informações realizadas durante as viagens.</string>
    <string name="observacaoAvaliacao">Observação</string>
    <string name="tipoAvaliacao">Tipo Avaliação</string>
    <string name="descri_o">Descrição</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="e_mail">E-mail</string>
    <string name="senha2">Senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="todo">TODO</string>
    <string name="enviar">Enviar</string>
    <string name="tipoperfil">TipoPerfil</string>

</resources>