<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_estatistica"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_donoAnimal"
            android:icon="@drawable/ic_menu_donoanimal"
            android:title="@string/menu_donoAnimal" />
        <item
            android:id="@+id/nav_motorista"
            android:icon="@drawable/ic_menu_motorista"
            android:title="@string/menu_motorista" />
        <item
            android:id="@+id/nav_viagem"
            android:icon="@drawable/ic_menu_viagem"
            android:title="@string/menu_viagem" />
        <item
            android:id="@+id/nav_veiculos"
            android:icon="@drawable/ic_menu_veiculo"
            android:title="@string/menu_veiculos" />
        <item
            android:id="@+id/nav_animais"
            android:icon="@drawable/ic_menu_animais"
            android:title="@string/menu_animais" />
        <item
            android:id="@+id/nav_contasadm"
            android:icon="@drawable/ic_menu_contasadm"
            android:title="@string/menu_contasadm" />

    </group>
</menu>
