<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_procurar"
        android:icon ="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_procurar"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_adicionar"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/action_adicionar"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_salvar"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        android:title="@string/action_salvar"
        app:showAsAction="always" />

</menu>