<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/fundo_margem_preta"
    android:orientation="vertical"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="36dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_email_login" />

        <TextView
            android:id="@+id/textNomeListaADM"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:paddingStart="5dp"
            android:text="@string/nome"
            android:textAppearance="@style/Fonte_Textos_menores"
            android:textColor="@color/preto"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textEmailListADM"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="fill_vertical"
                android:text="@string/e_mail"
                android:textAlignment="textEnd"
                android:textAppearance="@style/Fonte_Textos_menores"
                android:textColor="@color/preto"
                android:textSize="14sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textTipoPerfilListaADM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipoperfil"
                android:textAlignment="textEnd"
                android:textColor="@color/preto"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>