<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.LoginActivity">

    <ImageView
        android:id="@+id/Logo_Tela_login"
        android:layout_width="253dp"
        android:layout_height="153dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_travel_pet_laranja"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/roxo_escuro"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo_Tela_login"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="166dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="150dp"
            android:text="@string/acesse_sua_conta" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_email_login"
            android:drawablePadding="5dp"
            android:text="@string/e_mail"
            android:textAlignment="textStart"
            android:textAppearance="@style/Fonte_Textos_menores"
            android:textColor="@color/branco"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textEmailLoginAdm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/branco"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_senha_login"
            android:drawablePadding="5dp"
            android:text="@string/senha2"
            android:textAlignment="textStart"
            android:textAppearance="@style/Fonte_Textos_menores"
            android:textColor="@color/branco"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textSenhaLoginAdm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/branco"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textResetSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/esqueci_minha_senha"
            android:textAlignment="textEnd"
            android:textAppearance="@style/Fonte_Textos_menores"
            android:textColor="@color/branco"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="184dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botao_azul"
            android:text="@string/login"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>