<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageAvaliacao"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_menu_motorista" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textAvaliador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTintMode="screen"
                android:paddingStart="5dp"
                android:text="@string/avaliador"
                android:textAppearance="@style/Fonte_Textos_menores"
                android:textColor="@color/preto"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textAvaliado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTintMode="screen"
                android:gravity="clip_vertical|fill_vertical"
                android:paddingEnd="5dp"
                android:text="@string/avaliado"
                android:textAppearance="@style/Fonte_Textos_menores"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textNotaAvaliacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTintMode="screen"
            android:gravity="center_vertical"
            android:lineSpacingExtra="10sp"
            android:paddingEnd="8dp"
            android:text="@string/notaAvaliacao"
            android:textAlignment="textEnd"
            android:textAppearance="@style/Fonte_Textos_menores"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="0.3dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/fundo_divisor" />

</LinearLayout>