<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/roxo_escuro"
    app:layout_anchorGravity="center"
    tools:context=".ui.TipoAnimal.AdicionarTipoAnimalActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/fundo_cinza"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_Avaliacao"
            android:textAlignment="center"
            android:textAppearance="@style/Fonte_Textos_menu.laranja" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/observação_Avaliacao"
            android:textAlignment="center"
            android:textAppearance="@style/Fonte_Textos_menu"
            android:textColor="@color/preto"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageTipoAvaliacao"
                android:layout_width="134dp"
                android:layout_height="155dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_menu_donoanimal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="avaliação : "
                    android:textAppearance="@style/Fonte_Textos_menores"
                    android:textColor="@color/preto"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textInfoNotaAvaliacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_weight="1"
                    android:text="4,5"
                    android:textAppearance="@style/Fonte_Textos_menores"
                    android:textColor="@color/preto"
                    android:textSize="64sp" />

                <TextView
                    android:id="@+id/textInfoDataAvaliacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data da Avaliação"
                    android:textAlignment="center"
                    android:textColor="@color/about_separator_color"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="5dp"
                android:text="@string/avaliador"
                android:textAppearance="@style/Fonte_Textos_menores"
                android:textColor="@color/preto" />

            <EditText
                android:id="@+id/textInfoAvaliadorAvaliacao"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="@drawable/fundo_margem_preta"
                android:editable="false"
                android:paddingLeft="5dp"
                android:textColor="@color/preto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="5dp"
                android:text="@string/avaliado"
                android:textAppearance="@style/Fonte_Textos_menores"
                android:textColor="@color/preto"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textInfoAvaliadoAvaliacao"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="@drawable/fundo_margem_preta"
                android:editable="false"
                android:paddingLeft="5dp"
                android:textColor="@color/preto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="5dp"
                android:text="@string/tipoAvaliacao"
                android:textAppearance="@style/Fonte_Textos_menores"
                android:textColor="@color/preto"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textInfoTipoAvaliacao"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="@drawable/fundo_margem_preta"
                android:editable="false"
                android:paddingLeft="5dp"
                android:textColor="@color/preto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/observacaoAvaliacao"
                android:textAlignment="textStart"
                android:textAppearance="@style/Fonte_Textos_menores"
                android:textColor="@color/preto" />

            <EditText
                android:id="@+id/textInfoObservacaoAvaliacao"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:background="@drawable/fundo_margem_preta"
                android:editable="false"
                android:gravity="start"
                android:paddingLeft="5dp"
                android:textColor="@color/preto" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>